# twitch-miner-cli

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: auth.rs  constants.rs  gql.rs  main.rs  notifications.rs  utils.rs  watcher.rs  websocket.rs
src/app/: campaigns.rs  config.rs  mod.rs  navigation.rs  state.rs  watcher_mgmt.rs
src/models/: channel.rs  gql.rs  inventory.rs  mod.rs
src/ui/: about.rs  dashboard.rs  mod.rs  settings.rs
